@@ -33,6 +33,7 @@ o [jj] Schema for mesh XML format
 * Mesh generation using triangle or tetgen?
 * Clean up iterators?
 * Fix local ordering and orientation
+* Seems to be something wrong with trimesh-32.xml.gz
 
 Linear Algebra
 --------------
